--- a/tools/googlefont2svg/locales/cs.json
+++ b/tools/googlefont2svg/locales/cs.json
@@ -1,7 +1,7 @@
 {
   "app": {
     "title": "Google písmo na SVG cestu",
-    "description": "Vytvářejte SVG cesty z Google písem s profesionálním brandingem JKT Group",
+    "description": "Vytvářejte SVG cesty z Google písem - Bezplatný online nástroj od RIPlay",
     "fontLabel": "Google písmo:",
     "fontPlaceholder": "Vyberte písmo...",
     "variantLabel": "Varianta:",
