--- a/tools/googlefont2svg/locales/de.json
+++ b/tools/googlefont2svg/locales/de.json
@@ -1,7 +1,7 @@
 {
   "app": {
     "title": "Google-Schriftart zu SVG-Pfad",
-    "description": "Erstellen Sie SVG-Pfade aus Google-Schriftarten mit professionellem JKT Group-Branding",
+    "description": "Erstellen Sie SVG-Pfade aus Google-Schriftarten - Kostenloses Online-Tool von RIPlay",
     "fontLabel": "Google-Schriftart:",
     "fontPlaceholder": "Schriftart auswählen...",
     "variantLabel": "Variante:",
