--- a/tools/googlefont2svg/locales/en.json
+++ b/tools/googlefont2svg/locales/en.json
@@ -1,7 +1,7 @@
 {
   "app": {
     "title": "Google Font to SVG Path",
-    "description": "Create SVG paths from Google Fonts with professional JKT Group branding",
+    "description": "Create SVG paths from Google Fonts - Free online tool by RIPlay",
     "fontLabel": "Google font:",
     "fontPlaceholder": "Select a font...",
     "variantLabel": "Variant:",
